--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -53,7 +53,7 @@
 	    <div class="card-body">
 		<dl>
 		    <dt><a href="statistics/">Statistics</a></dt>
-		    <dd>Count of the content Wikidata lexemes.</dd>
+		    <dd>Count of Wikidata lexemes data.</dd>
 		</dl>
 
 	    </div>
