--- a/ordia/app/templates/lexical_category.html
+++ b/ordia/app/templates/lexical_category.html
@@ -56,6 +56,15 @@ WHERE {
 
 <table class="table table-hover" id="lexemes"></table>
 
+<div class="language-count-bubble-chart">
+
+  <h2>Language count</h2> 
+  
+  <div class="embed-responsive embed-responsive-4by3">
+    <iframe class="embed-responsive-item" src="https://query.wikidata.org/embed.html#%23defaultView%3ABubbleChart%0A%23%20Count%20of%20number%20of%20lexemes%20used%20for%20a%20specified%20lexical%20category%0A%23%20wrt.%20language%0ASELECT%0A%20%20%3Fcount%0A%20%20%3Flanguage%20%3FlanguageLabel%0AWHERE%20%7B%0A%20%20%7B%0A%20%20%20%20SELECT%20%28COUNT%28%2a%29%20AS%20%3Fcount%29%20%3Flanguage%20%7B%0A%20%20%20%20%20%20wd%3A{{ q }}%20%5Ewikibase%3AlexicalCategory%20%2F%20dct%3Alanguage%20%3Flanguage%20.%0A%20%20%20%20%7D%0A%20%20%20%20GROUP%20BY%20%3Flanguage%0A%20%20%7D%0A%20%20OPTIONAL%20%7B%0A%20%20%20%20%3Flanguage%20rdfs%3Alabel%20%3FlanguageLabel%20.%0A%20%20%20%20FILTER%20%28LANG%28%3FlanguageLabel%29%20%3D%20%27en%27%29%0A%20%20%7D%0A%7D%0AORDER%20BY%20DESC%28%3Fcount%29"></iframe>
+  </div>
+
+</div>
 
 
 <div class="lexical-categories-graph">
