--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -26,7 +26,7 @@
 
 {% block navbar %}
 
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<div class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <form class="form-inline" action="{{ url_for('app.show_search') }}">
 	<div class="input-group">
             <input type="text" class="form-control"
@@ -48,37 +48,65 @@
     
 
     <div class="collapse navbar-collapse" id="navbarToogle">
-	<ul class="navbar-nav">
-	  <!-- li class="nav-item">
-	    <a class="nav-link" href="{{ url_for('app.index') }}">Home</a>
-	  </li --> 
-	  <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
-	    </li>
+	<ul class="nav navbar-nav">
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}">Lexical categories</a>
-	    </li>
+		<a class="nav-link" href="{{ url_for('app.index') }}">Home</a>
+	    </li> 
+	    
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-aspects">Aspects</a>
 	    </li>
-	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
-	    </li>
-	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
-	    </li>
+
+	    <div id="nav-aspects" class="collapse">
+		<ul class="nav navbar-nav">
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}">Lexical categories</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
+		    </li>
+		</ul>
+	    </div>
+	    
 	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
 	    </li>
+	    
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">Examples</a>
 	    </li>
+
+	    <div id="nav-examples" class="collapse">
+		<ul class="nav navbar-nav">
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
+		    </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_lf', l='L128', f='F3') }}">Example form L128-F3 (vovserne)</a>
+		    </li>
+		</ul>
+	    </div>
+
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_lf', l='L128', f='F3') }}">Example form L128-F3 (vovserne)</a>
+		<a class="nav-link" href="{{ url_for('app.show_statistics') }}">Statistics</a>
 	    </li>
+
 	</ul>
     </div>
-</nav>
+
+</div>
+
+
+
 
 {% endblock %}
 
