--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -91,7 +91,10 @@ ORDER BY ?word
 	    <option value="da"{% if text_language == 'da' %} selected="selected"{% endif %}>Dansk</option>
 	    <option value="de"{% if text_language == 'de' %} selected="selected"{% endif %}>Deutsch</option>
 	    <option value="en"{% if text_language == 'en' %} selected="selected"{% endif %}>English</option>
+	    <option value="es"{% if text_language == 'es' %} selected="selected"{% endif %}>Español</option>
 	    <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français</option>
+	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
+	    <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം</option>
 	    <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polski</option>
 	    <option value="sv"{% if text_language == 'sv' %} selected="selected"{% endif %}>Svenska</option>
 	</select>
