--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -80,6 +80,10 @@
 	    <li class="nav-item">
 		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
 	    </li>
+
+	    <li class="nav-item">
+		<a class="nav-link" href="{{ url_for('app.show_guess_image_from_word') }}">Guess image from word</a>
+	    </li>
 	    
 	    <li class="nav-item">
 		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">Examples</a>
