Implement localization with Danish
Work in progress. It is not clear how efficient the library is and
getting translation is not straightforward.

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -16,18 +16,18 @@
 	<div class="card mb-4 box-shadow">
 	    
             <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Examples</h4>
+		<h4 class="my-0 font-weight-normal">{{_("Examples")}}</h4>
             </div>
             <div class="card-body">
 		<dl>
 		    <dt><a href="L99">Luftballon</a></dt>
 		    <dd>
-			German lexeme.
+			{{_("German lexeme.")}}
 		    </dd>
 
 		    <dt><a href="L128-F3">Vovserne</a></dt>
 		    <dd>
-			Danish form.
+			{{_("Danish form.")}}
 		    </dd>
 		</dl>
             </div>
@@ -36,24 +36,24 @@
 
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Tools</h4>
+		<h4 class="my-0 font-weight-normal">{{_("Tools")}}</h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
 		    <dt><a href="text-to-lexemes">Text-to-lexemes</a></dt>
-		    <dd>Convert a text to a list of lexemes.</dd>
+		    <dd>{{_("Convert a text to a list of lexemes.")}}</dd>
 		</dl>
 	    </div>
         </div>
 	
         <div class="card mb-4 box-shadow">
 	    <div class="card-header">
-		<h4 class="my-0 font-weight-normal">Other</h4>
+		<h4 class="my-0 font-weight-normal">{{_("Other")}}</h4>
 	    </div>
 	    <div class="card-body">
 		<dl>
-		    <dt><a href="statistics/">Statistics</a></dt>
-		    <dd>Count of Wikidata lexemes data.</dd>
+		    <dt><a href="statistics/">{{_("Statistics")}}</a></dt>
+		    <dd>{{_("Count of Wikidata lexemes data.")}}</dd>
 		</dl>
 
 	    </div>
