--- a/ordia/app/templates/language_index.html
+++ b/ordia/app/templates/language_index.html
@@ -35,7 +35,7 @@ ORDER BY DESC(?number_of_lexemes)
 {% block page_content %}
 
 <div class="languages">
-  <h1>Languages</h1>
+  <h1>{{_("Languages")}}</h1>
 
   <table class="table table-hover" id="languages"></table>
 
