--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -31,7 +31,7 @@
 	<div class="input-group">
             <input type="text" class="form-control"
 		   name="q" id="searchterm" value="{{ query }}"
-		   placeholder="Search after lemma or form"/>
+		   placeholder="{{_("Search after lemma or form")}}"/>
             <span class="input-group-btn">
 		<button class="btn btn-primary" type="submit">
 		    Ordia
@@ -50,39 +50,39 @@
     <div class="collapse navbar-collapse" id="navbarToogle">
 	<ul class="nav navbar-nav">
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.index') }}">Home</a>
+		<a class="nav-link" href="{{ url_for('app.index') }}">{{_("Home")}}</a>
 	    </li> 
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-aspects">Aspects</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-aspects">{{_("Aspects")}}</a>
 	    </li>
 
 	    <div id="nav-aspects" class="collapse">
 		<ul class="nav navbar-nav">
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_language_index') }}">Languages</a>
+			<a class="nav-link" href="{{ url_for('app.show_language_index') }}">{{_("Languages")}}</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}">Lexical categories</a>
+			<a class="nav-link" href="{{ url_for('app.show_lexical_category_index') }}">{{_("Lexical categories")}}</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
+			<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">{{_("Grammatical features")}}</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
+			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">{{_("Properties")}}</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
+			<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">{{_("References")}}</a>
 		    </li>
 		</ul>
 	    </div>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">{{_("Text to lexemes")}}</a>
 	    </li>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">Examples</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">{{_("Examples")}}</a>
 	    </li>
 
 	    <div id="nav-examples" class="collapse">
@@ -97,7 +97,7 @@
 	    </div>
 
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_statistics') }}">Statistics</a>
+		<a class="nav-link" href="{{ url_for('app.show_statistics') }}">{{_("Statistics")}}</a>
 	    </li>
 
 	</ul>
