--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -241,6 +241,12 @@ WHERE {
     <h2>Compounds</h2>
 
     <table class="table table-hover" id="compounds"></table>
+
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe loading="lazy" class="embed-responsive-item" src="https://query.wikidata.org/embed.html#%23%20Show%20compound%20hierarchy%0A%23defaultView%3AGraph%0ASELECT%20%3Flexeme1%20%3Flexeme1Label%20%3Flexeme2%20%3Flexeme2Label%20%7B%0A%20%20hint%3AQuery%20hint%3Aoptimizer%20%22None%22.%0A%20%20VALUES%20%3Flexeme%20%7B%20wd%3A{{ l }}%20%7D%0A%20%20%7B%0A%20%20%20%20%3Flexeme%20wdt%3AP5238%2B%20%3Flexeme1%20%2C%20%3Flexeme2%20.%20%0A%20%20%20%20%3Flexeme1%20wdt%3AP5238%20%3Flexeme2%20.%0A%20%20%7D%0A%20%20UNION%0A%20%20%7B%0A%20%20%20%20BIND%28%3Flexeme%20AS%20%3Flexeme1%29%0A%20%20%20%20%3Flexeme%20wdt%3AP5238%20%3Flexeme2%20.%0A%20%20%7D%0A%20%20UNION%0A%20%20%7B%0A%20%20%20%20BIND%28%3Flexeme%20AS%20%3Flexeme2%29%0A%20%20%20%20%3Flexeme1%20wdt%3AP5238%20%3Flexeme%20.%0A%20%20%7D%0A%20%20%3Flexeme1%20wikibase%3Alemma%20%3Flexeme1Label%20.%0A%20%20%3Flexeme2%20wikibase%3Alemma%20%3Flexeme2Label%20.%0A%7D%0ALIMIT%20500"></iframe>
+  </div>
+
+
     
 </div>
 
