--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -96,6 +96,7 @@ ORDER BY ?word
 	    <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी</option>
 	    <option value="ml"{% if text_language == 'ml' %} selected="selected"{% endif %}>മലയാളം</option>
 	    <option value="pl"{% if text_language == 'pl' %} selected="selected"{% endif %}>Polski</option>
+	    <option value="pt"{% if text_language == 'pt' %} selected="selected"{% endif %}>Português</option>
 	    <option value="sv"{% if text_language == 'sv' %} selected="selected"{% endif %}>Svenska</option>
 	    <option value="vi"{% if text_language == 'vi' %} selected="selected"{% endif %}>Tiếng Việt</option>
 	</select>
