Add two example links to text-to-lexemes

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -41,7 +41,9 @@
 	    <div class="card-body">
 		<dl>
 		    <dt><a href="text-to-lexemes">Text-to-lexemes</a></dt>
-		    <dd>Convert a text to a list of lexemes.</dd>
+		    <dd>Convert a text to a list of lexemes:
+			<a href="text-to-lexemes?text=Regeringen%20spiser%20gr%C3%B8nne%20%C3%A6bler%20om%20vinteren&text-language=da">Danish example</a> and
+			<a href="text-to-lexemes?text=Cars,%20bikes%20and%20motorcycles%20must%20stop%20at%20the%20crossing&text-language=en">English example</a>.</dd>
 		</dl>
 	    </div>
         </div>
