--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -114,6 +114,7 @@ WHERE {
     BIND("Usage example" AS ?description)
     ?lexeme p:P5831 ?value_statement .
     ?value_statement ps:P5831 ?value .
+    BIND(?value AS ?valueLabel)
     OPTIONAL {
       ?value_statement prov:wasDerivedFrom / pr:P248 ?source . 
       ?source wdt:P1476 ?sourceLabel .
