--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -72,6 +72,9 @@
 			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
 		    </li>
 		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_hyphenation_index') }}">Hyphenation</a>
+		    </li>
+		    <li class="nav-item">
 			<a class="nav-link" href="{{ url_for('app.show_reference_index') }}">References</a>
 		    </li>
 		</ul>
