--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -88,6 +88,7 @@ ORDER BY ?word
 	<label for="language">Language:</label>
 	<select class="form-control" id="language-selector" name="text-language">
 	    <option value="ar"{% if text_language == 'ar' %} selected="selected"{% endif %}>العربية</option>
+	    <option value="bn"{% if text_language == 'bn' %} selected="selected"{% endif %}>বাংলা</option>
 	    <option value="br"{% if text_language == 'br' %} selected="selected"{% endif %}>Brezhoneg</option>
 	    <option value="da"{% if text_language == 'da' %} selected="selected"{% endif %}>Dansk</option>
 	    <option value="de"{% if text_language == 'de' %} selected="selected"{% endif %}>Deutsch</option>
